--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.6.5",
     "h5p-standalone": "^3.5.0",
     "ionicons": "^6.0.1",
+    "swiper": "^8.0.6",
     "vue": "^3.2.21",
     "vue-h5p": "^0.5.0",
     "vue-router": "^4.0.12"
